# Blog

./: .env  .gitignore  .vercelignore  CONTRIBUTING.md  PROJECT_DESCRIPTION.md  README.md  app.old.py  app.py  blog.db  blog1.db  config.py  container.py  credentials.json  deploy_app.py  ffmpeg_microservice.md  pyproject.toml  requirements.txt  run.py  test_logging.py  vercel.json  webhook_listener.py  worker.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
backend/: index.js  migrate-data.js  migrate-images.js  package-lock.json  package.json
blueprints/: __init__.py  admin.py  api.py  auth.py  blog.py
ffmpeg/lib/: libpostproc.so.58.3.100  libswresample.so.5.3.100  libswscale.so.8.3.100
frontend/: package-lock.json  package.json
frontend/src/: index.js
plans/: lazy_loading_plan.md  logging_plan.md  refactoring_plan.md
repositories/: __init__.py  post_repository.py  user_repository.py  video_repository.py
services/: __init__.py  auth_service.py  post_service.py  video_service.py  worker_service.py
static/: script.js  style.css
static/css/: post.css  style.css
static/js/: app.js  editor.js  hls.min.js  new.js  script.js  uploader.js  (+2 more)
templates/: calendar.html  edit.html  index.html  layout.html  login.html  new.html  post.html  summary.html
tests/: README_VIDEO_TESTS.md  conftest.py  test_app_video_unit.py  test_blog.py  test_edit_post.py  test_javascript_validation.py  test_video.py  test_video_player.py  test_viewer.py  test_worker_unit.py
utils/: logger.py
(+12 files in other folders)
