[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "supabase>=2.22.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
]
