[project]
name = "blog"
version = "0.1.0"
description = "Hacker-Themed Flask Blog Platform"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "pydantic-core>=2.20.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "supabase>=2.22.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "ruff>=0.14.5",
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
